remove id parameter in put request
